--- a/app/src/app/book-list/book-list.component.html
+++ b/app/src/app/book-list/book-list.component.html
@@ -21,8 +21,21 @@
   </nav>
   
   <main class="container">
+    
     <div class="row">
-      <button class="btn btn-primary float-end">Create</button>
+      <button class="btn btn-primary float-end" (click)="openDialog(1)">Create Book</button>
+    </div>
+    <div class="row">
+      <form class="row row-cols-lg-auto g-3 align-items-center">
+        <div class="col-12">
+          <label  for="inlineFormInputGroupUsername">Search</label>
+        </div>
+        <div class="col-12">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="keyword..." (keypress)="filterData($event.target.value)">
+          </div>
+        </div>
+      </form>
     </div>
     <div class="row">
       <table class="table table-default">
@@ -40,12 +53,38 @@
           <tr *ngFor='let item of data'>
             <td>{{item.name}}</td>
             <td>{{item.author}}</td>
-            <td>{{item.category}}</td>
+            <td>{{item.category.name}}</td>
             <td>{{item.publication_date | date}}</td>
-            <td>{{item.status}}</td>
-            <td></td>
+            <td>{{item.available==1 ? 'Available' : 'Unavailable'}}</td>
+            <td>
+              <button class="btn p-2" (click)="editDialog(item.id)">
+                <fa-icon class="text-success" [icon]="['fas', 'edit']"></fa-icon>
+              </button>
+              <button class="btn p-2" (click)="changeStatus(item.id, item.available == 1 ? {available:0} : {available:1}, 2)">
+                <fa-icon class="text-warning" [icon]="['fas', 'minus-square']"></fa-icon>
+              </button>
+              <button class="btn p-2">
+                <fa-icon class="text-danger" [icon]="['fas', 'trash']" (click)="changeStatus(item.id, {deleted:1}, 1)"></fa-icon>
+              </button>
+            </td>
           </tr>
         </tbody>
       </table>
+    </div>
+    <div class="row">
+      <nav aria-label="navigation">
+        <ul class="pagination justify-content-center">
+          
+          <li class="page-item" *ngIf="page!= 1">
+            <a role="button" class="page-link" (click)="changePage(1)">Previous</a>
+          </li>
+          <li class="page-item" *ngFor="let item of [].constructor(total_pages); let i = index"  [ngClass]="{'active': page==i+1}">
+            <a role="button"  class="page-link" (click)="changePage(i+1)">{{i+1}}</a>
+          </li>
+          <li class="page-item" *ngIf="page!= total_pages">
+            <a role="button" class="page-link" (click)="changePage(total_pages)">Next</a>
+          </li>
+        </ul>
+      </nav>
     </div>
   </main>
